@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.8
 Date: 2021.08.25
+  Changes:
+    - Lizard Doggos can be healed by feeding them another Paleberry.
   Bugfixes:
     - Added sanity check for recipe ingredient counts
     - Used the above sanity check to find that Fabric was listed as craftable in the Constructor, instead of the Assembler.
